--- a/SFML_Project/SFML_Project/SFML_Project.vcxproj
+++ b/SFML_Project/SFML_Project/SFML_Project.vcxproj
@@ -132,6 +132,13 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Sorting\ShellSort.cpp" />
+    <ClCompile Include="Sorting\CycleSort.cpp" />
+    <ClCompile Include="Sorting\PancakeSort.cpp" />
+    <ClCompile Include="Sorting\MergeSort.cpp" />
+    <ClCompile Include="Sorting\HeapSort.cpp" />
+    <ClCompile Include="Sorting\QuickSort.cpp" />
+    <ClCompile Include="Sorting\RadixSort.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Sorting\GnomeSort.cpp" />
     <ClCompile Include="Sorting\RandomSort.cpp" />
@@ -141,8 +148,16 @@
     <ClCompile Include="Sorting\Shuffle.cpp" />
     <ClCompile Include="Sorting\StdSort.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Sorting\StoogeSort.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sorting\ShellSort.h" />
+    <ClInclude Include="Sorting\CycleSort.h" />
+    <ClInclude Include="Sorting\PancakeSort.h" />
+    <ClInclude Include="Sorting\MergeSort.h" />
+    <ClInclude Include="Sorting\HeapSort.h" />
+    <ClInclude Include="Sorting\QuickSort.h" />
+    <ClInclude Include="Sorting\RadixSort.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Sorting\GnomeSort.h" />
     <ClInclude Include="Sorting\RandomSort.h" />
@@ -154,6 +169,7 @@
     <ClInclude Include="Sorting\Shuffle.h" />
     <ClInclude Include="Sorting\Sorting.h" />
     <ClInclude Include="Sorting\StdSort.h" />
+    <ClInclude Include="Sorting\StoogeSort.h" />
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
