--- a/SFML_Project/SFML_Project/SFML_Project.vcxproj.filters
+++ b/SFML_Project/SFML_Project/SFML_Project.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Sorting\StoogeSort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Sorting\CombSort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Sorting\StoogeSort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sorting\CombSort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
